--- a/Ressources/CSS/style.css
+++ b/Ressources/CSS/style.css
@@ -62,10 +62,12 @@ header .tel {
 
 .businessNav {
   color: #2eb612 !important;
+  margin-left: 10px;
 }
 
 .navColor {
   color: white !important;
+  margin-left: 15px;
 }
 
 .navColor:hover {
