--- a/Ressources/CSS/style.scss
+++ b/Ressources/CSS/style.scss
@@ -84,10 +84,14 @@ header {
 
 .businessNav {
     color: $bleuClair !important;
+    margin-left: 10px;
 }
 
 .navColor {
     color: white !important;
+    margin-left: 15px;
+
+
 }
 
 .navColor:hover {
